rm fixed navbar--> no overlapping

--- a/css/frame.css
+++ b/css/frame.css
@@ -1,6 +1,3 @@
-body {
-    padding-top: 70px;
-}
 .executed {
     opacity: 0.8;
     background: #5FB404;
